# ae-discord

./: .gitignore  .pre-commit-config.yaml  Club_Name  Config.example.ini  Dockerfile  Main.py  README.md  backend.py  bot.toml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml
data/: club.json
db/: models.py
src/: client.py  main.py  settings.py
src/commands/: admin.py  club.py  help.py  misc.py  news.py  role.py
src/db/: models.py
src/services/: club.py  news.py
